grease pencil on surface bug #45434

Closed
opened 2015-07-15 00:10:52 +02:00 by daniel · 6 comments

System Information
win 7 64x

Blender Version
Broken: 2.75.2 6ed1a1a
Worked: (optional)

Short description of error
gpencil does not "stick" to surface of the mesh which you drawing on when you change clip distance -as shown on the pictures
Exact steps for others to reproduce the error
try to draw the pattern from the blend file or from the gpencil_bug_0.png when you set the clip start on 10cm and on 1mm
gpencil_bug.blend

gpencil_bug_0.png

gpencil_bug_1.png
gpencil_bug_2.png

**System Information** win 7 64x **Blender Version** Broken: 2.75.2 6ed1a1a Worked: (optional) **Short description of error** gpencil does not "stick" to surface of the mesh which you drawing on when you change clip distance -as shown on the pictures **Exact steps for others to reproduce the error** try to draw the pattern from the blend file or from the gpencil_bug_0.png when you set the clip start on 10cm and on 1mm [gpencil_bug.blend](https://archive.blender.org/developer/F207017/gpencil_bug.blend) ![gpencil_bug_0.png](https://archive.blender.org/developer/F207018/gpencil_bug_0.png) ![gpencil_bug_1.png](https://archive.blender.org/developer/F207020/gpencil_bug_1.png) ![gpencil_bug_2.png](https://archive.blender.org/developer/F207023/gpencil_bug_2.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @midan-3

Added subscriber: @midan-3

Added subscribers: @JoshuaLeung, @mont29

Added subscribers: @JoshuaLeung, @mont29

I think you are merely suffering from float imprecision here (a clip start of 1mm is very small, and will often generate glitches like that…

@JoshuaLeung You know better how exactly projected GP works, so will let you handle this. ;)

I think you are merely suffering from float imprecision here (a clip start of 1mm is very small, and will often generate glitches like that… @JoshuaLeung You know better how exactly projected GP works, so will let you handle this. ;)
Joshua Leung was assigned by Bastien Montagne 2015-07-15 10:47:48 +02:00

This issue was referenced by 1d02d34de9

This issue was referenced by 1d02d34de913e61698cf3d61d0538645140fcf87

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45434
No description provided.