Fix T45434: GPencil on editmode surface fails

Z-offset use for drawing & picking was problematic for extracting locations from depth values.

Use flag to optionally disable.